--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,20 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-width: 1200px;
   margin: 0px auto;
   padding: 0;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.about-wrapper,
+.box-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1200px;
+  margin: auto;
 }
 
 nav {
@@ -100,7 +108,7 @@ a:active {
           justify-content: center;
   -webkit-transform: translateY(50px);
           transform: translateY(50px);
-  padding-bottom: 130px;
+  padding-bottom: 180px;
 }
 
 .honeycomb-cell {
@@ -224,7 +232,8 @@ a:active {
   display: grid;
       grid-template-areas: "hexa txt";
   /* justify-content: space-around; */
-  padding-bottom: 60px;
+  margin-top: 50px;
+  margin-bottom: 60px;
 }
 
 .about .text-about {
@@ -341,12 +350,16 @@ a:active {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  color: #bebebe;
+  font-family: "Lato", sans-serif;
 }
 
 .contact-form .box-wrapper {
   display: -ms-grid;
   display: grid;
       grid-template-areas: "title title title" "form form cont";
+  padding-left: 30px;
+  margin-bottom: 40px;
 }
 
 .contact-form .title-wrapper {
@@ -354,8 +367,8 @@ a:active {
   -ms-grid-column: 1;
   -ms-grid-column-span: 3;
   grid-area: title;
-  padding-left: 100px;
-  padding-top: 40px;
+  margin-top: 50px;
+  padding-bottom: 20px;
 }
 
 .contact-form .form-wrapper {
@@ -363,48 +376,61 @@ a:active {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
   grid-area: form;
-  padding-left: 100px;
   padding-right: 5px;
   padding-bottom: 40px;
+}
+
+.contact-form .form-wrapper form {
+  max-width: 100%;
 }
 
 .contact-form .form-wrapper input[type="text"],
 .contact-form .form-wrapper input[type="email"],
 .contact-form .form-wrapper textarea {
   width: 100%;
-  margin: 5px 0 22px 0;
+  margin: 5px 0 10px 0;
+  padding: 10px;
   display: inline-block;
   border: none;
   background: #f1f1f1;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   resize: vertical;
+  background-color: #454545;
+  font-family: "Lato", sans-serif;
 }
 
-.contact-form .form-wrapper input[type="text"] form,
-.contact-form .form-wrapper input[type="email"] form,
-.contact-form .form-wrapper textarea form {
-  padding-bottom: 150px;
-  max-width: 100%;
-  margin: 50px auto;
+.contact-form .form-wrapper button {
+  float: right;
+  background-color: #2eb398;
+  color: #d7fcf5;
+  padding: 15px 30px;
+  text-transform: uppercase;
+  cursor: pointer;
 }
 
 .contact-form .contact-wrapper {
   -ms-grid-row: 2;
   -ms-grid-column: 3;
   grid-area: cont;
-  padding-right: 100px;
-  padding-left: 5px;
+  padding-right: 30px;
+  padding-left: 30px;
   font-size: 12px;
   text-align: justify;
 }
 
-.contact-form .contact-wrapper h4 {
+.contact-form .contact-wrapper ul {
+  list-style-type: none;
   margin-top: 30px;
+  display: block;
+  text-align: center;
 }
 
 /* ----------------@@@------------------ */
 @media (max-width: 550px) {
+  .contact-form .box-wrapper {
+    padding-left: 0px;
+  }
   .honeycomb-cell {
     margin: 81.25px 25px;
   }
@@ -424,12 +450,15 @@ a:active {
   .honeycomb-cell:nth-child(11) {
     display: none;
   }
-  nav .menu-container:nth-child(5) {
+  nav .menu-container:nth-child(4) {
     padding-right: 0;
   }
 }
 
 @media (min-width: 550px) and (max-width: 825px) {
+  .contact-form .box-wrapper {
+    padding-left: 0px;
+  }
   .honeycomb-cell:nth-child(3n) {
     margin-right: calc(50% - 125px);
     margin-left: calc(50% - 125px);
