--- a/css/style.scss
+++ b/css/style.scss
@@ -9,10 +9,17 @@ body {
 .honeycomb,
 .about {
   display: flex;
-  max-width: 1200px;
+  //   max-width: 1200px;
   margin: 0px auto;
   padding: 0;
   align-items: center;
+}
+
+.about-wrapper,
+.box-wrapper {
+  display: flex;
+  max-width: 1200px;
+  margin: auto;
 }
 
 nav {
@@ -80,7 +87,7 @@ a:active {
   list-style: none;
   justify-content: center;
   transform: translateY(50px);
-  padding-bottom: 130px;
+  padding-bottom: 180px;
 }
 
 .honeycomb-cell {
@@ -172,7 +179,9 @@ a:active {
     display: grid;
     grid-template-areas: "hexa txt";
     /* justify-content: space-around; */
-    padding-bottom: 60px;
+    margin-top: 50px;
+    margin-bottom: 60px;
+    // border-left: 3px solid #219d84;
   }
 
   .text-about {
@@ -281,53 +290,69 @@ a:active {
   background-color: #323232;
   color: white;
   justify-content: space-between;
+  color: #bebebe;
+  font-family: "Lato", sans-serif;
 
   .box-wrapper {
     display: grid;
     grid-template-areas:
       "title title title"
       "form form cont";
+    padding-left: 30px;
+    margin-bottom: 40px;
   }
 
   .title-wrapper {
     grid-area: title;
-    padding-left: 100px;
-    padding-top: 40px;
+    margin-top: 50px;
+    padding-bottom: 20px;
   }
   .form-wrapper {
     grid-area: form;
-    padding-left: 100px;
     padding-right: 5px;
     padding-bottom: 40px;
+
+    form {
+      max-width: 100%;
+    }
 
     input[type="text"],
     input[type="email"],
     textarea {
       width: 100%;
-      margin: 5px 0 22px 0;
+      margin: 5px 0 10px 0;
+      padding: 10px;
       display: inline-block;
       border: none;
       background: #f1f1f1;
       box-sizing: border-box;
       resize: vertical;
+      background-color: #454545;
+      font-family: "Lato", sans-serif;
+    }
 
-      form {
-        padding-bottom: 150px;
-        max-width: 100%;
-        margin: 50px auto;
-      }
+    button {
+      float: right;
+      background-color: #2eb398;
+      color: #d7fcf5;
+      padding: 15px 30px;
+      text-transform: uppercase;
+      cursor: pointer;
     }
   }
 
   .contact-wrapper {
     grid-area: cont;
-    padding-right: 100px;
-    padding-left: 5px;
+    padding-right: 30px;
+    padding-left: 30px;
     font-size: 12px;
     text-align: justify;
 
-    h4 {
+    ul {
+      list-style-type: none;
       margin-top: 30px;
+      display: block;
+      text-align: center;
     }
   }
 }
@@ -335,6 +360,9 @@ a:active {
 /* ----------------@@@------------------ */
 
 @media (max-width: 550px) {
+  .contact-form .box-wrapper {
+    padding-left: 0px;
+  }
   .honeycomb-cell {
     margin: 81.25px 25px;
   }
@@ -357,11 +385,14 @@ a:active {
   .honeycomb-cell:nth-child(11) {
     display: none;
   }
-  nav .menu-container:nth-child(5) {
+  nav .menu-container:nth-child(4) {
     padding-right: 0;
   }
 }
 @media (min-width: 550px) and (max-width: 825px) {
+  .contact-form .box-wrapper {
+    padding-left: 0px;
+  }
   .honeycomb-cell:nth-child(3n) {
     margin-right: calc(50% - 125px);
     margin-left: calc(50% - 125px);
