--- a/css/style.scss
+++ b/css/style.scss
@@ -338,6 +338,7 @@ a:active {
       padding: 15px 30px;
       text-transform: uppercase;
       cursor: pointer;
+      border: none;
     }
   }
 
